# Computer-Graphics-IT2406-NY

./: CMakeLists.txt  INSTALL_LINUX.md  Makefile  README.md
shaders/: marching_cubes.frag  marching_cubes.geom  marching_cubes.vert
src/: glad.c  main.cpp  utilities.cpp  utilities.h
src/Libraries/include/glad/: glad.h
src/Libraries/lib/: glfw3.lib
